[project]
name = "dog-assistant"
version = "0.1.0"
description = "Home Assistant integration to track feeding, walks, poo and pee for your dog."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "PL",   # pylint
  "RUF",  # ruff-specific
]
ignore = [
  "PLR2004",  # magic value comparisons are fine in tests
  "RUF012",   # HA uses mutable _attr_* class attributes by convention
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "SLF001"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = false
follow_imports = "silent"
# Keep strict checks on our own code, but tolerate the Home Assistant / voluptuous
# typing boundary (treated as Any below) so these two flags don't fire on every
# HA decorator or attribute access.
disallow_untyped_decorators = false
warn_return_any = false

# voluptuous has no type stubs; HA is typed when installed but absent for a bare
# `pip install mypy`, so ignore missing imports for both.
[[tool.mypy.overrides]]
module = ["homeassistant.*", "voluptuous.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
